[gd_scene load_steps=9 format=3 uid="uid://dppvl8up7h4br"]

[ext_resource type="Texture2D" uid="uid://dq4h7g2625nft" path="res://assets/booknobackground.svg" id="1_84uaa"]
[ext_resource type="Script" path="res://BookView/book_view.gd" id="1_qo7gd"]
[ext_resource type="Resource" uid="uid://d1ymuglidjrr0" path="res://resources/player_state.tres" id="2_dv4bw"]
[ext_resource type="Texture2D" uid="uid://civmffyad70rv" path="res://assets/close_128.png" id="3_5nm8o"]
[ext_resource type="PackedScene" uid="uid://cd0qwo0augsda" path="res://BookView/puzzle_pages/puzzle_pages/castle0_page_0.tscn" id="4_rpv8k"]
[ext_resource type="PackedScene" uid="uid://0lvlbnj150ub" path="res://BookView/puzzle_pages/puzzle_pages/castle1_page_0.tscn" id="5_ppxmw"]
[ext_resource type="PackedScene" uid="uid://b81tumioqdgjl" path="res://BookView/puzzle_pages/puzzle_pages/stables_page_0.tscn" id="6_bijfd"]
[ext_resource type="PackedScene" uid="uid://dv4lqeidsuem1" path="res://BookView/puzzle_pages/puzzle_pages/guardroom_page_0.tscn" id="7_xwycs"]

[node name="BookView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_qo7gd")
player_state = ExtResource("2_dv4bw")
metadata/_edit_lock_ = true

[node name="BookViewSubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="BookViewSubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Panel" type="Panel" parent="BookViewSubViewportContainer/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_type_variation = &"MenuShade"

[node name="BookPort" type="Control" parent="BookViewSubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -720.0
offset_top = -540.0
offset_right = 720.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_filter = 2

[node name="BackdropShade" type="PanelContainer" parent="BookViewSubViewportContainer/SubViewport/BookPort"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BookBackgroundAnchor" type="Control" parent="BookViewSubViewportContainer/SubViewport/BookPort"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Sprite2D" type="Sprite2D" parent="BookViewSubViewportContainer/SubViewport/BookPort/BookBackgroundAnchor"]
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_84uaa")

[node name="PagesContainer" type="HBoxContainer" parent="BookViewSubViewportContainer/SubViewport/BookPort"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftBookMargin" type="MarginContainer" parent="BookViewSubViewportContainer/SubViewport/BookPort/PagesContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_type_variation = &"BookViewMargins"
theme_override_constants/margin_left = 160

[node name="TabContainer_Clues" type="TabContainer" parent="BookViewSubViewportContainer/SubViewport/BookPort/PagesContainer/LeftBookMargin"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ClearPanel"

[node name="Names" type="HFlowContainer" parent="BookViewSubViewportContainer/SubViewport/BookPort/PagesContainer/LeftBookMargin/TabContainer_Clues"]
layout_mode = 2
mouse_filter = 2

[node name="Symbols" type="HFlowContainer" parent="BookViewSubViewportContainer/SubViewport/BookPort/PagesContainer/LeftBookMargin/TabContainer_Clues"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="RightBookMargin" type="MarginContainer" parent="BookViewSubViewportContainer/SubViewport/BookPort/PagesContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_type_variation = &"BookViewMargins"
theme_override_constants/margin_right = 160

[node name="TabContainer_Puzzles" type="TabContainer" parent="BookViewSubViewportContainer/SubViewport/BookPort/PagesContainer/RightBookMargin"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ClearPanel"

[node name="Castle Entrance" parent="BookViewSubViewportContainer/SubViewport/BookPort/PagesContainer/RightBookMargin/TabContainer_Puzzles" instance=ExtResource("4_rpv8k")]
layout_mode = 2

[node name="Courtyard" parent="BookViewSubViewportContainer/SubViewport/BookPort/PagesContainer/RightBookMargin/TabContainer_Puzzles" instance=ExtResource("5_ppxmw")]
visible = false
layout_mode = 2

[node name="Stables" parent="BookViewSubViewportContainer/SubViewport/BookPort/PagesContainer/RightBookMargin/TabContainer_Puzzles" instance=ExtResource("6_bijfd")]
visible = false
layout_mode = 2

[node name="Guardroom" parent="BookViewSubViewportContainer/SubViewport/BookPort/PagesContainer/RightBookMargin/TabContainer_Puzzles" instance=ExtResource("7_xwycs")]
visible = false
layout_mode = 2

[node name="CloseButtonPanelContainer" type="PanelContainer" parent="BookViewSubViewportContainer/SubViewport/BookPort"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
mouse_filter = 1
theme_type_variation = &"BookPanel"

[node name="CloseTextureRect" type="TextureRect" parent="BookViewSubViewportContainer/SubViewport/BookPort/CloseButtonPanelContainer"]
layout_mode = 2
texture = ExtResource("3_5nm8o")

[node name="CloseButton" type="Button" parent="BookViewSubViewportContainer/SubViewport/BookPort/CloseButtonPanelContainer"]
layout_mode = 2
tooltip_text = "Close"

[connection signal="pressed" from="BookViewSubViewportContainer/SubViewport/BookPort/CloseButtonPanelContainer/CloseButton" to="." method="_on_close_button_pressed"]
